--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
         </p>
         <ul class="intro__list">
           <li class="intro__list-item">
-            Часовых поясов <span class="intro__list-item_digit">11</span>
+            Часовых поясов <span class="intro__list-item intro__list-item_digit">11</span>
           </li>
           <li class="intro__list-item">
-            Объектов природного наследия ЮНЕСКО <span class="intro__list-item_digit">12</span>
+            Объектов природного наследия ЮНЕСКО
+            <span class="intro__list-item intro__list-item_digit">12</span>
           </li>
           <li class="intro__list-item">
-            Объектов культурного наследия ЮНЕСКО <span class="intro__list-item_digit">16</span>
+            Объектов культурного наследия ЮНЕСКО
+            <span class="intro__list-item intro__list-item_digit">16</span>
           </li>
           <li class="intro__list-item">
-            Природных заповедников <span class="intro__list-item_digit">105</span>
+            Природных заповедников <span class="intro__list-item intro__list-item_digit">105</span>
           </li>
           <li class="intro__list-item">
-            Аэропортов <span class="intro__list-item_digit">241</span>
+            Аэропортов <span class="intro__list-item intro__list-item_digit">241</span>
           </li>
         </ul>
       </section>
