--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 
   <body class="root">
     <!--======header====-->
-    <!--контент должен центрироваться по ширине и не быть шире чем в макете (макет для 1280px - это максимальная ширина), сейчас контент растягивается по ширине браузера OK-->
     <header class="header">
       <img src="./images/svg/__logo.svg" alt="Логотип Путешествие по России" class="header__logo" />
       <ul class="header__lang-links">
-        <!--Можно лучше: отступы между дочерними элементами можно сделать через flex + column-gap, а собственные отступы элементов обнулить. ОК-->
         <li class="header__lang-item">
-          <!--Элементы для выбора языка нужно сделать ссылками OK-->
           <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
         </li>
         <li class="header__lang-item">
@@ -32,20 +29,7 @@
       <!--======lead====-->
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-        <!--Можно лучше: использовать неразрывный пробел OK-->
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <!--Отступ до изображения не совпадает с макетом 768px OK-->
-        <!--<figure> Можно лучше: здесь можно использовать более семантичные теги для иллюстрации. 
-          значение по умолчанию
-          figure {
-          display : block;
-          margin-top: 1em;
-          margin-bottom: 1em;
-          margin-left: 40px;
-          margin-right: 40px;
-          } 
-        Для обнуления надо вводить дополнительный класс.
-        Можно редактировать normolize-->
         <picture>
           <source srcset="./images/img_lead.jpg" media="(min-width: 800px)" />
           <img
@@ -55,7 +39,6 @@
           />
         </picture>
         <p class="lead__caption">ваша полка — верхняя</p>
-        <!--Боковой отступ не совпадает с макетом 768px OK-->
       </section>
 
       <!--======intro====-->
@@ -76,7 +59,6 @@
           <li class="intro__list-item">
             Часовых поясов
             <span class="intro__digit">11</span>
-            <!--Нужно использовать новый класс для стилизации фрагмента текста, это уже не "элемент списка"Модификатор будет не нужен-->
           </li>
           <li class="intro__list-item">
             Объектов природного наследия ЮНЕСКО
@@ -236,6 +218,10 @@
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
+          <div class="place__website">
+            <h3 class="place__url-heading">url</h3>
+            <a href="http://park-kosa.ru/" class="place__link">park-kosa.ru</a>
+          </div>
           <picture>
             <source srcset="./images/place-kosa.jpg" media="(min-width: 800px)" />
             <img
@@ -245,24 +231,17 @@
             />
           </picture>
 
-          <div class="place__website">
-            <h3 class="place__url-heading">url</h3>
-            <!--Можно лучше: использовать тег заголовка следующего уровня OK-->
-            <a href="http://park-kosa.ru/" class="place__link">park-kosa.ru</a>
-          </div>
           <div class="place__text">
             <p class="place__paragraph">
-              Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два
-              водныхгоризонта&mdash; спокойного Куршского залива с&nbsp;одной стороны
-              и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой.Уникальная природная зона
-              на&nbsp;краю российского анклава.
+              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря
+              с другой. Уникальная природная зона на краю российского анклава.
             </p>
             <p class="place__paragraph">
-              На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
-              и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка
-              России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших
-              приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
-              природы и&nbsp;запах стального, прохладного моря.
+              На этом Калининградская область не заканчивается. Для путешественника и исследователя
+              там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
+              наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
+              окуная в спокойствие природы и запах стального, прохладного моря.
             </p>
           </div>
         </div>
@@ -288,17 +267,15 @@
           </div>
           <div class="place__text">
             <p class="place__paragraph">
-              Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра,от которой
-              на&nbsp;юг &mdash;тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
-              прикидывающийся Баренцевым морем.
+              Почти весь полуостров находится за Полярным кругом. Саамская тундра,от которой на юг
+              тайга,на север Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="place__paragraph">
-              Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического
-              фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под
-              снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
-              вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной,
-              а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть
-              северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
+              Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+              Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
+              уроках географии. Возможно, вы не интересовались пронизывающей земную кору
+              сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
+              увидеть северное сияние начинает сбываться с билетом в Мурманск.
             </p>
           </div>
         </div>
@@ -354,11 +331,10 @@
               в&nbsp;России.
             </p>
             <p class="place__paragraph">
-              Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по
-              скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,
-              и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду.
-              В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен
-              мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+              Конечно, это всё так. Но Байкал ещё идеальное место для  соревнований по скийорингу.
+              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается
+              развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
         </div>
@@ -396,7 +372,6 @@
       <!--======cover====-->
 
       <section class="cover">
-        <!--Лишний элемент. Его можно удалить, а стили перенести на родительский: тег <a> допускает несколько дочерних тегов. OK-->
         <a
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           class="cover__overlay"
@@ -404,8 +379,8 @@
         >
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">
-            По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы
-            до&nbsp;Байкала на&nbsp;электричках
+            По мотивам учебной темы о Транссибе путешествие от столицы до Байкала
+            на&nbsp;электричках
           </p>
         </a>
       </section>
